# barcode-utils

./: .gitignore  Makefile  README  README.md  index.html
barcode-dbus-service/: .gitignore  (+6 more)
barcode-manager/: .gitignore  AUTHORS  BarcodeManager.pc.in  Makefile.am  README.md  autogen.sh  configure.ac  x
barcode-manager-applet/src/: Makefile.am  applet-dbus-manager.c  applet-dbus-manager.h  applet-device-bt.c  applet-device-bt.h  applet-dialogs.c  applet-dialogs.h  applet.c  applet.h  main.c
barcode-manager-applet/src/connection-editor/: Makefile.am  bm-connection-editor-service.xml  bm-connection-editor.c  bm-connection-editor.h  bm-connection-list.c  bm-connection-list.h  ce-page.c  ce-page.h  ce-polkit-button.c  ce-polkit-button.h  main.c  ppp-auth-methods-dialog.c  ppp-auth-methods-dialog.h
barcode-manager-applet/src/gconf-helpers/: Makefile.am  bma-gconf-connection.c  bma-gconf-connection.h  bma-gconf-settings.c  bma-gconf-settings.h  gconf-helpers.c  gconf-helpers.h  gconf-upgrade.c  gconf-upgrade.h
barcode-manager-applet/src/gnome-bluetooth/: bt-widget.c
barcode-manager-applet/src/marshallers/: Makefile.am  bma-marshal-main.c
barcode-manager-applet/src/utils/: Makefile.am  bma-bling-spinner.c  bma-bling-spinner.h  utils.c  utils.h
barcode-manager/callouts/: 40-barcode-scanners.rules  Makefile.am  bm-dispatcher-action.c  bm-dispatcher-action.h  bm-dispatcher.conf  bm-dispatcher.xml  org.freedesktop.bm_dispatcher.service.in
barcode-manager/cli/src/: Makefile.am  barcode-manager.c  barcode-manager.h  bmcli.c  bmcli.h  connections.c  connections.h  devices.c  devices.h  settings.c  settings.h  utils.c  utils.h
barcode-manager/data/: BarcodeManager.service.in  Makefile.am  org.freedesktop.BarcodeManager.service.in
barcode-manager/debian/: BarcodeManager.conf  README.Debian  barcode-manager-dev.install  barcode-manager.dirs  barcode-manager.install  barcode-manager.manpages  barcode-manager.postinst  barcode-manager.postrm  barcode-manager.preinst  barcode-manager.prerm  barcode-manager.upstart  changelog  control  copyright  libbm-glib-dev.install  libbm-glib-dev.links  libbm-glib2.install  libbm-util-dev.install  libbm-util1.install  rules
barcode-manager/docs/: Makefile.am  generate-settings-spec.c
barcode-manager/docs/libbm-glib/: Makefile.am  libnm-glib-docs.sgml  libnm-glib.types
barcode-manager/docs/libbm-util/: Makefile.am  libnm-util-docs.sgml
barcode-manager/examples/python/: Makefile.am  bm-state.py
barcode-manager/include/: BarcodeManager.h  Makefile.am  bm-dbus-glib-types.h  bm-glib-compat.h  bm-test-helpers.h  bm-version.h.in
barcode-manager/initscript/: Makefile.am
barcode-manager/introspection/: Makefile.am  all.xml  bm-active-connection.xml  bm-device-bt.xml  bm-device-hidraw.xml  bm-device-serial.xml  bm-device.xml  bm-exported-connection.xml  bm-manager-client.xml  bm-manager.xml  bm-settings-system.xml  bm-settings.xml  errors.xml  generic-types.xml
barcode-manager/libbm-glib/: Makefile.am  bm-active-connection.c  bm-active-connection.h  bm-client.c  bm-client.h  bm-dbus-utils.c  bm-dbus-utils.h  bm-device-bt.c  bm-device-bt.h  bm-device-hidraw.c  bm-device-hidraw.h  bm-device-private.h  bm-device.c  bm-device.h  bm-exported-connection.c  bm-exported-connection.h  bm-object-cache.c  bm-object-cache.h  bm-object-private.h  bm-object.c  bm-object.h  bm-remote-connection-private.h  bm-remote-connection.c  bm-remote-connection.h  bm-remote-settings-system.c  bm-remote-settings-system.h  bm-remote-settings.c  bm-remote-settings.h  bm-serial-device.c  bm-serial-device.h  bm-settings-connection-interface.c  bm-settings-connection-interface.h  bm-settings-interface.c  bm-settings-interface.h  bm-settings-service.c  bm-settings-service.h  bm-settings-system-interface.c  bm-settings-system-interface.h  bm-types-private.h  bm-types.c  (+6 more)
barcode-manager/libbm-util/: Makefile.am  bm-connection.c  bm-connection.h  bm-param-spec-specialized.c  bm-param-spec-specialized.h  bm-setting-bluetooth.c  bm-setting-bluetooth.h  bm-setting-connection.c  bm-setting-connection.h  bm-setting-serial.c  bm-setting-serial.h  bm-setting-template.c  bm-setting-template.h  bm-setting.c  bm-setting.h  bm-utils-private.h  bm-utils.c  bm-utils.h  libbm-util.pc.in  libbm-util.ver  libbm_util_la-bm-utils.lo
barcode-manager/man/: BarcodeManager.8.in  BarcodeManager.conf.5.in  Makefile.am  bm-online.1.in  bm-system-settings.conf.5.in  bm-tool.1.in  bmcli.1.in
barcode-manager/marshallers/: Makefile.am  bm-marshal-main.c  bm-marshal.c  bm-marshal.h
barcode-manager/po/: LINGUAS  POTFILES.in
barcode-manager/policy/: Makefile.am  org.freedesktop.BarcodeManager.policy.in  org.freedesktop.barcode-manager-settings.system.policy.in
barcode-manager/src/: BarcodeManager.conf  BarcodeManagerUtils.c  BarcodeManagerUtils.h  Makefile.am  bm-activation-request.c  bm-activation-request.h  bm-active-connection.c  bm-active-connection.h  bm-call-store.c  bm-call-store.h  bm-crash-logger.c  bm-dbus-manager.c  bm-dbus-manager.h  bm-device-bt.c  bm-device-bt.h  bm-device-hidraw.c  bm-device-hidraw.h  bm-device-interface.c  bm-device-interface.h  bm-device-private.h  bm-device.c  bm-device.h  bm-manager-auth.c  bm-manager-auth.h  bm-manager.c  bm-manager.h  bm-netlink-monitor.c  bm-netlink-monitor.h  bm-policy.c  bm-policy.h  bm-properties-changed-signal.c  bm-properties-changed-signal.h  bm-secrets-provider-interface.c  bm-secrets-provider-interface.h  bm-system.c  bm-system.h  bm-udev-manager.c  bm-udev-manager.h  main.c
barcode-manager/test/: Makefile.am  bm-online.c  bm-tool.c
indicator-barcode/: .gitignore  Makefile.am  autogen.sh  configure.ac
indicator-barcode/data/: Makefile.am  indicator-barcode-agent.service.in  indicator-barcode.service.in  ok-banner
indicator-barcode/debian/: changelog  control  copyright  rules
indicator-barcode/po/: POTFILES.in
indicator-barcode/scripts/: Makefile.am  cmcc  indicator-network-daemon-debug  indicator-network-debug  indicator-network-mobile-wizard
indicator-barcode/src/: Makefile.am
indicator-barcode/tests/: Makefile.am
(+164 files in other folders)
