man_MANS =				\
	BarcodeManager.8		\
	BarcodeManager.conf.5		\
	bm-system-settings.conf.5	\
	bm-tool.1			\
	bm-online.1			\
	bmcli.1

EXTRA_DIST =				\
	$(man_MANS)			\
	BarcodeManager.8.in		\
	BarcodeManager.conf.5.in	\
	bm-system-settings.conf.5.in	\
	bm-tool.1.in			\
	bm-online.1.in			\
	bmcli.1.in

CLEANFILES = $(man_MANS)

